ipc/ipdl/test/ipdl/error/twoprotocols.ipdl
// it's an error to define two protocols in the same file

//error: only one protocol definition per file

[ChildProc=any]
protocol p1 {
child: async Msg();
};

[ChildProc=any]
protocol p2 {
child: async Msg();
};
